--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "firebase": "^10.11.0",
@@ -25,6 +26,8 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.368.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-d3-graph": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-loader-spinner": "^6.1.6",
