--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
+    "react-select": "^5.8.3",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
