--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jwt-decode": "3.1.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.368.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-d3-graph": "^2.6.0",
@@ -32,8 +33,10 @@
     "react-router-dom": "^6.8.0",
     "react-select": "^5.8.3",
     "react-toastify": "^10.0.5",
+    "reactflow": "^11.11.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "vis-timeline": "^7.7.3",
     "yup": "^1.4.0"
   },
   "devDependencies": {
