--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-d3-graph": "^2.6.0",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^18.2.0",
+    "react-force-graph": "^1.47.4",
+    "react-force-graph-2d": "^1.27.0",
     "react-leaflet": "^4.2.1",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^8.0.5",
